--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,8 @@ repositories {
 
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+	implementation 'org.springframework.boot:spring-boot-starter-security'
+	implementation 'org.springframework.security:spring-security-test'
 	implementation 'com.h2database:h2:1.4.200'
 	implementation 'org.springframework:spring-jdbc:5.2.3.RELEASE'
 	implementation 'org.jdbi:jdbi3-core:3.12.2'
