add basic swagger

--- a/build.gradle
+++ b/build.gradle
@@ -16,11 +16,13 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-starter-security'
 	implementation 'org.springframework.security:spring-security-test'
+	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
 	implementation 'com.h2database:h2:1.4.200'
 	implementation 'org.springframework:spring-jdbc:5.2.3.RELEASE'
 	implementation 'org.jdbi:jdbi3-core:3.12.2'
 //	implementation 'org.jdbi:jdbi3-sqlobject:3.12.2'
 	implementation 'org.jdbi:jdbi3-jackson2:3.12.2'
+	implementation 'com.fasterxml.jackson.dataformat:jackson-dataformat-yaml:2.10.2'
 	implementation 'org.junit.jupiter:junit-jupiter:5.6.0'
 	testImplementation('org.springframework.boot:spring-boot-starter-test') {
 		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
