--- a/build.gradle
+++ b/build.gradle
@@ -20,10 +20,10 @@ dependencies {
 	implementation 'com.h2database:h2:1.4.200'
 	implementation 'org.springframework:spring-jdbc:5.2.3.RELEASE'
 	implementation 'org.jdbi:jdbi3-core:3.12.2'
-//	implementation 'org.jdbi:jdbi3-sqlobject:3.12.2'
 	implementation 'org.jdbi:jdbi3-jackson2:3.12.2'
 	implementation 'com.fasterxml.jackson.dataformat:jackson-dataformat-yaml:2.10.2'
 	implementation 'org.junit.jupiter:junit-jupiter:5.6.0'
+//	implementation 'org.mockito:mockito-core:3.3.0'
 	testImplementation('org.springframework.boot:spring-boot-starter-test') {
 		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
 	}
